--- a/manga-jivl.vercel.app/index.html
+++ b/manga-jivl.vercel.app/index.html
@@ -1116,7 +1116,7 @@
         <div class="pr-label">PR：健康家族</div>
         <div class="container">
           <a href="https://www.kenkoukazoku.co.jp/lp/dea/ad_hzks/lp_hzks01/index.html" data-ga-event="cta_click" data-ga-label="logo">
-            <h1 class="logo">健康家族</h1>
+            <h1 class="logo">ひざこしコラーゲンW</h1>
             <p class="tagline">ひざ・腰の悩みにWでアプローチ</p>
           </a>
         </div>
